<resources>
    <string name="app_name">Escambinho</string>
    <string name="escambinho">escambinho</string>
    <string name="unb">unb</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="pesquisar_produto">Pesquisar produto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="init_chat">Iniciar Chat</string>
    <string name="signup_title">Olá! Você é novo aqui!\nPrecisamos de mais algumas informações&#8230;</string>
    <string name="signup_input_seu_nome">Seu nome</string>
    <string name="signup_input_sua_data">Sua data de nascimento</string>
    <string name="signup_input_sua_matr">Sua matrícula</string>
    <string name="signup_input_seucur">Seu curso</string>
    <string name="signup_btn_continuar">Continuar</string>
    <string name="name">Nome</string>
    <string name="happybirthday">Data de Nascimento</string>
    <string name="curse">Curso</string>
    <string name="registration">Matrícula</string>
    <string name="upload_da_foto">Upload da foto</string>
    <string name="titulo">Título</string>
    <string name="autor">Autor</string>
    <string name="editora">Editora</string>
    <string name="edicao">Edição</string>
    <string name="ano">Ano</string>
    <string name="paginas">Páginas</string>
    <string name="condicao">Condição</string>
    <string name="descricao">Descrição</string>
    <string name="tags">Tags</string>
    <string name="anunciar">Anunciar</string>
    <string name="signup_btn_naoenovo">Não é um usuário novo?\nVoltar e verificar e-mail</string>
    <string name="item_photo">Item photo</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed ante quis leo consectetur tempus. Vivamus maximus feugiat felis at consequat. Pellentesque blandit consequat odio, sed dapibus turpis elementum sed. Nam a velit et tortor fermentum blandit venenatis sit amet quam. Aenean molestie faucibus justo nec pellentesque</string>
    <string name="livro_de_design">Livro de Design</string>
    <string name="cicraninho">Cicraninho</string>
    <string name="contatar">Contatar</string>
    <string name="anderson_macaquinho">Anderson Macaquinho</string>
    <string name="editora_bananeira">Editora Bananeira</string>
    <string name="_2a_edica">2a Edição</string>
    <string name="_1988">1988</string>
    <string name="_50">50</string>
    <string name="tags_content">Livro, Design, Desenho Industrial, Tipos</string>
    <string name="usado">Usado</string>
    <string name="adicionar_mochila">Adicionar à mochila</string>
</resources>
