<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/activity_item_information_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="97dp"
                android:contentDescription="@string/item_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/activity_item_information_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="22dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/livro_de_design"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_image" />

            <TextView
                android:id="@+id/activity_item_information_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/cicraninho"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_title" />

            <Button
                android:id="@+id/activity_item_information_contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="11dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:insetTop="15dp"
                android:insetBottom="15dp"
                android:text="@string/contatar"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/activity_item_information_name"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_title" />

            <TextView
                android:id="@+id/activity_item_information_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="29dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/autor"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_name" />

            <TextView
                android:id="@+id/activity_item_information_author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="29dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/anderson_macaquinho"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/activity_item_information_author"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_name" />

            <TextView
                android:id="@+id/activity_item_information_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/editora"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_author" />

            <TextView
                android:id="@+id/activity_item_information_publisher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:text="@string/editora_bananeira"
                app:layout_constraintStart_toEndOf="@+id/activity_item_information_publisher"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_author_name" />

            <TextView
                android:id="@+id/activity_item_information_edition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/edicao"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_publisher" />

            <TextView
                android:id="@+id/activity_item_information_edition_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginTop="12dp"
                android:text="@string/_2a_edica"
                app:layout_constraintStart_toEndOf="@+id/activity_item_information_edition"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_publisher_name" />

            <TextView
                android:id="@+id/activity_item_information_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/ano"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_edition" />

            <TextView
                android:id="@+id/activity_item_information_year_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="12dp"
                android:text="@string/_1988"
                app:layout_constraintStart_toEndOf="@+id/activity_item_information_year"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_edition_number" />

            <TextView
                android:id="@+id/activity_item_information_pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/paginas"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_year" />

            <TextView
                android:id="@+id/activity_item_information_pages_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="12dp"
                android:text="@string/_50"
                app:layout_constraintStart_toEndOf="@+id/activity_item_information_pages"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_year_number" />

            <TextView
                android:id="@+id/activity_item_information_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="39dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/descricao"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_pages" />

            <TextView
                android:id="@+id/activity_item_information_description_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="23dp"
                android:fontFamily="@font/montserrat"
                android:paddingLeft="23dp"
                android:paddingRight="23dp"
                android:text="@string/lorem_ipsum"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_description" />

            <TextView
                android:id="@+id/activity_item_information_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="39dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/tags"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_description_content" />

            <TextView
                android:id="@+id/activity_item_information_tags_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="75dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/tags_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_item_information_tags" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>